--- a/main.html
+++ b/main.html
@@ -8,6 +8,48 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>Car Insurance Form</h1>
+	<form action="#" method="post">
+		<div>
+			<label for="name"> Name:</label>
+			<input type="text" id="name" placeholder="Enter your name" required>
+		</div><br>
+		<div>
+			<label for="email"> Email:</label>
+			<input type="email" id="email" name="email" placeholder="Enter your email" required>
+		</div><br>
+		<div>
+			<label for="gender"> Gender:</label>
+			<input type="radio" id="male" name="gender">
+			<label for="male"> Male</label>
+			<input type="radio" id="female" name="gender">
+			<label for="female"> Female</label>
+		</div><br>
+		<div>
+			<label for="cars">Car brands:</label>
+			<select name="cars" id="cars">
+				<option value="" selected hidden></option>
+				<option value="bmw">BMW</option>
+				<option value="audi">Audi</option>
+				<option value="mercedez">Mercedez</option>
+			</select>
+		</div><br>
+		<div>
+			<label for="car-age">Car Age:</label>
+			<input type="number" id="carage" min="0" max="100" required>
+		</div><br>
+		<div>
+			<label for="date">Date of Purchase:</label>
+			<input type="date" id="dop" required>
+		</div><br>
+		<div>
+			<label for="password">Password:</label>
+			<input type="password" id="password" required>
+		</div><br>
+		<div>
+			<button type="submit">Submit</button>
+		</div>
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
