--- a/main.html
+++ b/main.html
@@ -20,9 +20,9 @@
 		</div><br>
 		<div>
 			<label for="gender"> Gender:</label>
-			<input type="radio" id="male" name="gender">
+			<input type="radio" id="male" name="gender" required>
 			<label for="male"> Male</label>
-			<input type="radio" id="female" name="gender">
+			<input type="radio" id="female" name="gender" required>
 			<label for="female"> Female</label>
 		</div><br>
 		<div>
@@ -35,11 +35,11 @@
 			</select>
 		</div><br>
 		<div>
-			<label for="car-age">Car Age:</label>
+			<label for="carage">Car Age:</label>
 			<input type="number" id="carage" min="0" max="100" required>
 		</div><br>
 		<div>
-			<label for="date">Date of Purchase:</label>
+			<label for="dop">Date of Purchase:</label>
 			<input type="date" id="dop" required>
 		</div><br>
 		<div>
